Inserindo estrutura base do projeto + DI e IoC

--- a/GestorContatos.API/GestorContatos.API.csproj
+++ b/GestorContatos.API/GestorContatos.API.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\GestorContatos.Core\GestorContatos.Core.csproj" />
+    <ProjectReference Include="..\GestorContatos.Infrastructure\GestorContatos.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
