--- a/GestorContatos.Infrastructure/GestorContatos.Infrastructure.csproj
+++ b/GestorContatos.Infrastructure/GestorContatos.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GestorContatos.Core\GestorContatos.Core.csproj" />
+  </ItemGroup>
+
 </Project>
