Criação de camada Application para melhor separar o código e manter a coesão e evitar acoplamento.

--- a/GestorContatos.API/GestorContatos.API.csproj
+++ b/GestorContatos.API/GestorContatos.API.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GestorContatos.Application\GestorContatos.Application.csproj" />
     <ProjectReference Include="..\GestorContatos.Core\GestorContatos.Core.csproj" />
     <ProjectReference Include="..\GestorContatos.Infrastructure\GestorContatos.Infrastructure.csproj" />
   </ItemGroup>
