--- a/GestorContatos.Infrastructure/GestorContatos.Infrastructure.csproj
+++ b/GestorContatos.Infrastructure/GestorContatos.Infrastructure.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GestorContatos.Application\GestorContatos.Application.csproj" />
     <ProjectReference Include="..\GestorContatos.Core\GestorContatos.Core.csproj" />
   </ItemGroup>
 
