Instalação do RabbitMQ; Configuração do Producer.

--- a/GestorContatos.Application/GestorContatos.Application.csproj
+++ b/GestorContatos.Application/GestorContatos.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GestorContatos.Core\GestorContatos.Core.csproj" />
   </ItemGroup>
 
