--- a/GestorContatos.API/appsettings.json
+++ b/GestorContatos.API/appsettings.json
@@ -8,5 +8,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MassTransit_InserirContato": {
+    "NomeFila": "inserir_contato",
+    "Servidor": "localhost",
+    "Usuario": "guest",
+    "Senha": "guest"
+  },
+  "MassTransit_AlterarContato": {
+    "NomeFila": "alterar_contato",
+    "Servidor": "localhost",
+    "Usuario": "guest",
+    "Senha": "guest"
+  },
+  "MassTransit_DeletarContato": {
+    "NomeFila": "deletar_contato",
+    "Servidor": "localhost",
+    "Usuario": "guest",
+    "Senha": "guest"
+  }
 }
